tests/machine/x/fs/map_int_key.fs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:27:44Z
open System

let m: System.Collections.Generic.IDictionary<string, string> = dict [(1, "a"); (2, "b")]
printfn "%A" (m.[1])
